--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "zoomable.js",
   "main": "zoomable.js",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "homepage": "https://github.com/marando/zoomable.js",
   "authors": [
     "Ashley Marando <a.marando@me.com>"
   ],
-  "description": "zoomable.js is a simple way to zoom images with jQuery",
+  "description": "A simple way to zoom images with jQuery",
   "keywords": [
     "jQuery",
     "javascript",
@@ -14,5 +14,6 @@
     "image",
     "lightbox"
   ],
-  "license": "GNU2"
+  "license": "GNU2",
+  "ignore": [ ]
 }
